[package]
name = "candle_auction"
version = "0.1.5"
authors = ["agryaznov"]
edition = "2018"
resolver = "2"

[dependencies.ink_primitives]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_metadata]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false
features = ["derive"]
optional = true

[dependencies.ink_env]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_storage]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies.ink_lang]
version = "3.0.0-rc6"
git = "https://github.com/paritytech/ink"
default-features = false

[dependencies]
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }

ink_prelude = { version = "3.0.0-rc6", path = "../ink/crates/prelude", default-features = false }


[lib]
name = "candle_auction"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

