[package]
name = "candle_auction"
version = "0.2.2"
authors = ["agryaznov"]
edition = "2018"
resolver = "2"

[dependencies]
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"], optional = true }

ink_prelude = { version = "3.0.0-rc7", default-features = false }
ink_lang = { version = "3.0.0-rc7", default-features = false }
ink_storage = { version = "3.0.0-rc7", default-features = false }
ink_env = { version = "3.0.0-rc7", default-features = false }
ink_metadata = { version = "3.0.0-rc7", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "3.0.0-rc7", default-features = false }


[lib]
name = "candle_auction"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

# Needed until the next ink! release
[profile.release]
overflow-checks = false
